[package]
name = "server-security"
version = "0.1.0"
authors = ["baoyachi <liaoymxsdl@gmail.com>"]
edition = "2018"
description = "server security proxy"
keywords = ["code-server", "code-server-security", "proxy"]
readme = "README.md"
repository = "https://github.com/baoyachi/server-security-rs"
license = "MIT AND Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5", features = ["full"] }
simple-log = "1.0.1"
log = "*"
anyhow = "1"
futures = "*"
arc-swap = "*"
once_cell = "1.7.2"