[package]
name = "server-security"
version = "0.1.1"
authors = ["baoyachi <liaoymxsdl@gmail.com>"]
edition = "2018"
description = "server security proxy"
keywords = ["code-server", "code-server-security", "proxy"]
readme = "README.md"
repository = "https://github.com/baoyachi/server-security-rs"
license = "MIT AND Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5", features = ["full"] }
simple-log = "1.0.2"
log = "0.4.14"
anyhow = "1.0.40"
futures = "0.3.14"
once_cell = "1.7.2"
shadow-rs = "0.5"
serde = { version = "1.0.125", features = ["derive"] }
toml = "0.5.8"
lettre = { version = "0.10.0-beta.3", features = ["smtp-transport", "native-tls", "builder"] }
#handlebars = "3.5.4"
duration-str = "0.2"
lru = "0.6.5"
chrono = "0.4.19"
async-trait = "0.1.50"